[fix]#8184 stop vertical align middle on icons

--- a/css/_modules.scss
+++ b/css/_modules.scss
@@ -735,6 +735,7 @@ a.button[disabled=disabled]:hover, button[disabled=disabled]:hover, input[type=b
             i::before{
             	@include run-transition(color);
             	font-weight: normal;
+				vertical-align: top;
             }
 
 		  	img{
